# bananaegg

./: .gitignore  Kconfig  LICENSE  README.md  partitions.csv  sdkconfig.default
components/lvgl__lvgl/examples/libs/png/: lv_example_png_1.c
components/lvgl__lvgl/examples/libs/qrcode/: lv_example_qrcode_1.c
main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  main.c
main/components/: aba_pay.c  aba_pay.h  acleda_white.c  acleda_white.h  canadia.c  canadia.h  coffee_house.c  coffee_house.h  dollar.c  dollar.h  dollar_red.c  dollar_red.h  duck.h  khqr.h  riel.c  riel.h  riel_red.c  riel_red.h  sathapana.c  sathapana.h
